tests/baselines/reference/functionOverloads17.errors.txt
tests/cases/compiler/functionOverloads17.ts(1,10): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/compiler/functionOverloads17.ts (1 errors) ====
    function foo():{a:number;}
             ~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo():{a:string;} { return {a:""} }
    